# generate-thumbnail

./: .gitignore  README.md  pyproject.toml
generate_thumbnail/: __init__.py
